Partial_14Dec2021/force-app/main/default/objects/Targets__c/Targets__c.object-meta.xml
<CustomObject>
    <label>Targets(O)</label>
    <nameField>
        <displayFormat>TN-{0}</displayFormat>
        <label>Target No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets(O)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>