Partial_14Dec2021/force-app/main/default/objects/Targets__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <label>Actual</label>
    <summarizedField>Promotions__c.Status__c</summarizedField>
    <summaryForeignKey>Promotions__c.Targets__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>