Partial_14Dec2021/force-app/main/default/objects/Targets__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Please enter last date of the month. (Eg. For January enter 31/01/2011)</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>