Partial_14Dec2021/force-app/main/default/objects/Targets__c/fields/Type_of_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Promotion__c</fullName>
    <label>Type of Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architects Meet</fullName>
                <color>#0B6FCE</color>
                <label>Architects Meet</label>
            </value>
            <value>
                <fullName>Boarers Meet</fullName>
                <color>#78C953</color>
                <label>Boarers Meet</label>
            </value>
            <value>
                <fullName>Builders Meet</fullName>
                <color>#E27001</color>
                <label>Builders Meet</label>
            </value>
            <value>
                <fullName>Dealers Meet</fullName>
                <color>#A845DC</color>
                <label>Dealers Meet</label>
            </value>
            <value>
                <fullName>Engineers Meet</fullName>
                <color>#F3D904</color>
                <label>Engineers Meet</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
                <color>#A53711</color>
                <label>Exhibition</label>
            </value>
            <value>
                <fullName>Farmers Meet</fullName>
                <color>#66E9BD</color>
                <label>Farmers Meet</label>
            </value>
            <value>
                <fullName>Jeep Campaign</fullName>
                <color>#0B24BE</color>
                <label>Jeep Campaign</label>
            </value>
            <value>
                <fullName>Mechanic Meet</fullName>
                <color>#419249</color>
                <label>Mechanic Meet</label>
            </value>
            <value>
                <fullName>Plumber Meet</fullName>
                <color>#B6E32E</color>
                <label>Plumber Meet</label>
            </value>
            <value>
                <fullName>Shandy Show</fullName>
                <color>#641CCF</color>
                <label>Shandy Show</label>
            </value>
            <value>
                <fullName>Tractor Show</fullName>
                <color>#F96FB7</color>
                <label>Tractor Show</label>
            </value>
            <value>
                <fullName>Mini Meet</fullName>
                <color>#2F5D85</color>
                <label>Mini Meet</label>
            </value>
            <value>
                <fullName>Dealers Salesman Meet</fullName>
                <color>#AFCADF</color>
                <label>Dealers Salesman Meet</label>
            </value>
            <value>
                <fullName>Dealers Factory Visit</fullName>
                <color>#8F6429</color>
                <label>Dealers Factory Visit</label>
            </value>
            <value>
                <fullName>Plumber/Mechanic/Engineers Factory Visit</fullName>
                <color>#EFAE73</color>
                <label>Plumber/Mechanic/Engineers Factory Visit</label>
            </value>
            <value>
                <fullName>Group Activity</fullName>
                <color>#57F17C</color>
                <label>Group Activity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>